[package]
name = "pxdct-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4.2", features = ["derive"] }

[dependencies.pxdct]
path = ".."

[[bin]]
name = "dct"
path = "dct/dct.rs"
test = false
doc = false
bench = false
